# optcrbm

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  requirements.txt
examples/: 01_train_semeion.py  03_ga_optimize_crbm.py  04_gp_optimize_crbm.py  05_gui_app.py
legacy/CRBM/: __init__.py  base.py  crbm.py  datasets.py  image_data.py  trainer.py  utils.py
legacy/GA/Caltech/: caltech_ga.py
legacy/GA/MNIST/: mnist_ga.py
legacy/GA/MPEG/: mpeg_ga.py
legacy/GA/Semeion/: semeion_ga.py
legacy/GP/Caltech/: gp.py
legacy/GP/MNIST/: gp.py
legacy/GP/MPEG/: gp.py
legacy/GP/Semeion/: gp.py
legacy/InterfaceGrafica/: controller.py  loadDataset.py
legacy/Run/Caltech/: main.py
legacy/Run/MNIST/: main.py
legacy/Run/MPEG/: main.py
legacy/Run/Natural_images/: main.py
legacy/Run/Semeion/: main.py
notebooks/: 01_train_semeion.ipynb
optcrbm/: __init__.py  config.py
optcrbm/crbm/: __init__.py  base.py  config.py  image_data.py  model.py
optcrbm/data/: __init__.py  image_patches.py  loaders.py  preprocessing.py
optcrbm/evolution/: __init__.py  fitness.py  genetic_algorithm.py  genetic_programming.py  search_space.py
optcrbm/gui/: __init__.py  app.py  main_window.py  workers.py
optcrbm/training/: __init__.py  config.py
scripts/: smoke_test.py
tests/: conftest.py  test_datasets.py  test_evolution.py  test_gui.py  test_package.py  test_trainer.py  test_utils.py
